--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
       float: left;
       width: 32%;
       margin-left: 3%;
-      height: 530px;
     }
     .column2 {
       float: left;
       width: 62%;
       margin-right: 3%;
-      height: 530px;
     }
     .row:after {
       content: "";
@@ -73,13 +71,13 @@
 
     <div class="row">
       <div class="column1">
-        <img src = "https://images.unsplash.com/photo-1555529211-3237f6e13d33?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=947&q=80" style="height: 100%; width: 100%; ">
+        <img id="home_img" src = "https://images.unsplash.com/photo-1555529211-3237f6e13d33?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=947&q=80" style="height: 100%; width: 100%; ">
       </div>
       <div class="column2" style="background-color: #ffb3e6; opacity: 0.92">
         <br \>
-        <h3 style="font-family: 'Flamenco'; color: white;font-size: 75px; text-align: center">
+        <h3 style="font-family: 'Flamenco'; color: white;font-size: 6vw; text-align: center">
         PICK A CONE</h3>
-        <h4 style="font-family: 'Flamenco'; color: white;font-size: 40px; text-align: center; padding-left:3%; padding-right: 3%"> We offer a variety
+        <h4 style="font-family: 'Flamenco'; color: white;font-size: 4vw; text-align: center; padding-left:3%; padding-right: 3%"> We offer a variety
         of treats, each made from the highest quality ingredients sourced from all over the globe.
         There's something special in every cup, cone, and bite. </h4>
       </div>
@@ -98,4 +96,21 @@
   </footer>
   </div>
 
+  <script>
+    // resize containers on page load
+    $(document).ready(function() {
+      resize_container();
+    })
+
+    // resize containers on change in window size
+    $(window).resize(function(){
+      resize_container();
+    });
+
+    // resize text box to be same height of image 
+    function resize_container() {
+      img_height = $("#home_img").height();
+      $(".column2").height(img_height);
+    }
+  </script>
 </body>
