--- a/events.html
+++ b/events.html
@@ -33,7 +33,7 @@
       font-family: 'Flamenco';
       background-color: #ECECEC;
       text-align: center;
-      bottom:50%;
+      bottom:100%;
       left:25%;
       opacity:0.8;
       vertical-align: middle;
@@ -106,7 +106,7 @@
       to forget.</h3>
   </div>
 
-  <div class="row" style="padding-left: 5%; padding-bottom:300px">
+  <div class="row" style="padding-left: 5%; padding-bottom:18vw">
 
     <div class="column" id="faded">
       <img id="bookclass" src="https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
