--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
- <link rel="stylesheet" type="text/css" href="style.css">
-
+<link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="style.css">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <meta charset="utf-8">
@@ -62,7 +62,7 @@
 </div>
 
 
-    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+    <h2 style="font-family: 'Open Sans'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
       
     Welcome to Jen & Berry's
 
@@ -71,13 +71,13 @@
 
     <div class="row">
       <div class="column1">
-        <img id="home_img" src = "https://images.unsplash.com/photo-1555529211-3237f6e13d33?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=947&q=80" style="height: 100%; width: 100%; ">
+        <img id="home_img" src = "https://images.unsplash.com/photo-1497034825429-c343d7c6a68f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80" style="height: 100%; width: 100%; opacity:0.92">
       </div>
       <div class="column2" style="background-color: #ffb3e6; opacity: 0.92">
         <br \>
-        <h3 style="font-family: 'Flamenco'; color: white;font-size: 6vw; text-align: center">
+        <h3 style="font-family: 'Open Sans', sans-serif; font-weight: lighter; color: white;font-size: 6vw; text-align: center">
         PICK A CONE</h3>
-        <h4 style="font-family: 'Flamenco'; color: white;font-size: 4vw; text-align: center; padding-left:3%; padding-right: 3%"> We offer a variety
+        <h4 style="font-family:'Open Sans', sans-serif; font-weight: lighter; color: white;font-size: 4vw; text-align: center; padding-left:3%; padding-right: 3%"> We offer a variety
         of treats, each made from the highest quality ingredients sourced from all over the globe.
         There's something special in every cup, cone, and bite. </h4>
       </div>
