--- a/press.html
+++ b/press.html
@@ -46,10 +46,10 @@
   </nav>
 </div>
 
-   <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 64px; line-height: 0.3; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+<!--    <h2 style="font-family: 'Flamenco'; text-decoration: underline; font-size: 64px; line-height: 0.3; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
    Press
     </h2>
-
+ -->
 <p>
 What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
   specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
@@ -88,9 +88,9 @@ What is Lorem Ipsum? Lorem Ipsum is simply dummy text of the printing and typese
 
 </p>
 
-<div style="height: 100px"> </div>
 
   <!--  footer  --> 
+  <div style="height: 100px"> </div>
   <footer id="center-menu">
     <ul>
       <li><a>   &copy; Copyright 2019 by nobody. All rights reserved. </a></li>
