--- a/menu.html
+++ b/menu.html
@@ -28,13 +28,16 @@
     h4 {
       text-align: center;
       font-family: 'Asap', sans-serif;
+      text-shadow: 2px 2px #000;
       font-size: 24px;
       color: #fff;
       margin-top:10px;
     }
+
     p {
       margin: 25px;
-      font-family: 'Asap', sans-serif;
+      font-family: 'Open Sans', sans-serif;
+      font-weight: lighter;
       font-size: 16px;
       color: #fff;
       text-align: center;
@@ -95,9 +98,9 @@
   </nav>
 </div>
   
-    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
+   <!--  <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
       Our Menu
-    </h2>
+    </h2> -->
 
         <div class="row">
             <div class="column"><img src="Menu-photos/pink.jpg" alt="Pink Ice Cream" class="img"></div>
