--- a/events.html
+++ b/events.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <title>Jen & Berry's: Events</title>
   
@@ -30,7 +31,7 @@
     .description {
       position: sticky;
       width: 35vw;
-      font-family: 'Flamenco';
+      font-family: 'Open Sans', sans-serif;
       background-color: #ECECEC;
       text-align: center;
       bottom:100%;
@@ -41,12 +42,13 @@
       padding-right: 25px;
       line-height: 50px; 
       margin: auto;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     }
 
     .intro {
       position: sticky;
       width: 45vw;
-      font-family: 'Flamenco';
+      font-family: 'Open Sans', sans-serif;
       background-color: #ECECEC;
       text-align: center;
       left:25%;
@@ -56,6 +58,7 @@
       padding-right: 25px;
       line-height: 50px; 
       margin: auto;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
     }
 
