--- a/events.html
+++ b/events.html
@@ -83,35 +83,31 @@
 </head>
 
 <body>
-
   <!--  header and nav bar  --> 
   <div class="sticky header">
-  <nav id="center-menu">
-    <ul>
-      <li> <h1> <span>JEN & BERRY'S</span> </h1> <li>
-    </ul>
-    <ul>
-      <li><a href="index.html">HOME</a></li>
-      <li><a href="menu.html">MENU</a></li>
-      <li><a class="active" href="events.html">EVENTS </a></li>
-      <li><a href="gallery.html">GALLERY</a></li>
-      <li><a href="press.html">PRESS</a></li>
-      <li><a href="ourstory.html">OUR STORY</a></li>
-      <li><a href="contact.html">CONTACT US</a></li>
-    </ul>
-  </nav>
-</div>
+    <nav id="center-menu">
+      <ul>
+        <li> <h1> <span>JEN & BERRY'S</span> </h1> <li>
+      </ul>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="menu.html">MENU</a></li>
+        <li><a class="active" href="events.html">EVENTS </a></li>
+        <li><a href="gallery.html">GALLERY</a></li>
+        <li><a href="press.html">PRESS</a></li>
+        <li><a href="ourstory.html">OUR STORY</a></li>
+        <li><a href="contact.html">CONTACT US</a></li>
+      </ul>
+    </nav>
+  </div>
 
-  <!-- <h2 class ="title">Events</h2> -->
 
   <div style="padding-top:30px; padding-bottom:50px">
     <h3 class="intro" style="opacity: 1; color:black; font-size:1.4vw">
-      We specialize in fun events for any age! Come to us for a birthday party, happy hour, or catering event that no one will be able
-      to forget.</h3>
+      We specialize in fun events for any age! Come to us for a birthday party, happy hour, or catering event so special that no one will forget it.</h3>
   </div>
 
   <div class="row" style="padding-left: 5%; padding-bottom:18vw">
-
     <div class="column" id="faded">
       <img id="bookclass" src="https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
     </div>
@@ -121,7 +117,6 @@
     <div class="column" id="faded">
       <img id="bookclass" src="https://images.unsplash.com/photo-1563252781-2f76e089e889?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
     </div>
-
   </div>
 
 
@@ -138,41 +133,6 @@
       <li><a>333 Rocky Road, NYC, NY 10005</a></li>
     </ul>
   </footer>
-
-  <script language="javascript">
-
-      $(document).ready(function() {
-        $('.description').hide();
-        $('#faded img').hover(function() {
-          $(this).stop().animate({opacity:.4},200);
-          $('.description').fadeIn();
-        }, function() {
-          $(this).stop().animate({opacity:1},500);
-          $('.description').delay(3000).fadeOut();
-        });
-      });
-      $(document).ready(function() {
-        $('.description').hide();
-        $('#faded img').hover(function() {
-          $(this).stop().animate({opacity:.4},200);
-          $('.description').fadeIn();
-        }, function() {
-          $(this).stop().animate({opacity:1},500);
-          $('.description').delay(3000).fadeOut();
-        });
-      });
-      $(document).ready(function() {
-        $('.description').hide();
-        $('#faded img').hover(function() {
-          $(this).stop().animate({opacity:.4},200);
-          $('.description').fadeIn();
-        }, function() {
-          $(this).stop().animate({opacity:1},500);
-          $('.description').delay(3000).fadeOut();
-        });
-      });
-
-  </script>
 
 
 </body>
