--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
             border-color: #ffffff;
             border-radius: 5px;
             margin-bottom: 5%;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         }
 
         textarea, select, input {
