--- a/events.html
+++ b/events.html
@@ -108,13 +108,13 @@
   </div>
 
   <div class="row" style="padding-left: 5%; padding-bottom:18vw">
-    <div class="column" id="faded">
+    <div class="column">
       <img id="bookclass" src="https://images.unsplash.com/photo-1501443762994-82bd5dace89a?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
     </div>
-    <div class="column" id="faded">
+    <div class="column">
       <img id="bookclass" src="https://images.unsplash.com/photo-1511559714511-3181c09c1cb0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80">
     </div>
-    <div class="column" id="faded">
+    <div class="column">
       <img id="bookclass" src="https://images.unsplash.com/photo-1563252781-2f76e089e889?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
     </div>
   </div>
