--- a/menu.html
+++ b/menu.html
@@ -2,6 +2,7 @@
 <html> 
 <head> 
   <title>Jen & Berry's: Our Menu</title>
+  <link rel="shortcut icon" href="icecream.jpg"/>
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
