--- a/ourstory.html
+++ b/ourstory.html
@@ -3,8 +3,7 @@
 <head> 
     <meta charset="utf-8">
     <title>Jen & Berry's: Our Story</title>
-    <script src="jquery-3.4.1.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="shortcut icon" href="icecream.jpg"/>
     <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Chivo&display=swap" rel="stylesheet">
