--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="icecream.jpg"/>
   <title>Jen & Berry's: Contact</title>
     <style>
         html, body {
