--- a/events.html
+++ b/events.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+  <link rel="shortcut icon" href="icecream.jpg"/>
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
