--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
   <title>Jen & Berry's: Gallery</title>
+    <link rel="shortcut icon" href="icecream.jpg"/>
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <style>
