--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-<link rel="shortcut icon" href="icecream.jpg"/>
 <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="style.css">
@@ -64,7 +63,7 @@
 </div>
 
 
-    <h2 style="font-family: 'Open Sans'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 75px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
       
     Welcome to Jen & Berry's
 
@@ -77,9 +76,9 @@
       </div>
       <div class="column2" style="background-color: #ffb3e6; opacity: 0.92">
         <br \>
-        <h3 style="font-family: 'Open Sans', sans-serif; font-weight: lighter; color: white;font-size: 4vw; text-align: center">
+        <h3 style="font-family: 'Open Sans', sans-serif; font-weight: bolder; color: white;font-size: 3.4vw; text-align: center">
         PICK A CONE</h3>
-        <h4 style="font-family:'Open Sans', sans-serif; font-weight: lighter; color: white;font-size: 2.5vw; text-align: center; padding-left:3%; padding-right: 3%"> We offer a variety
+        <h4 style="font-family:'Open Sans', sans-serif; font-weight: lighter; color: white;font-size: 2.3vw; text-align: center; padding-left:3%; padding-right: 3%"> We offer a variety
         of treats, each made from the highest quality ingredients sourced from all over the globe.
         There's something special in every cup, cone, and bite. </h4>
       </div>
