--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Asap&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <style> 
     body {
