--- a/events.html
+++ b/events.html
@@ -42,7 +42,8 @@
       vertical-align: middle;
       padding-left:25px;
       padding-right: 25px;
-      line-height: 50px; 
+      padding-top: 1%;
+      padding-bottom: 1%;
       margin: auto;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     }
@@ -58,10 +59,10 @@
       vertical-align: middle;
       padding-left:25px;
       padding-right: 25px;
-      line-height: 50px; 
+      padding-top: 1%;
+      padding-bottom: 1%;
       margin: auto;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-
     }
 
     #bookclass {
