--- a/press.html
+++ b/press.html
@@ -23,7 +23,12 @@
     background-size: 100%;
   }
 
-  .box {margin: 5px 0px 5px 0px; line-height: 30px; background-color: #FFDB9F;}
+  p{
+    color: #fff;
+    font-family:'Open Sans', sans-serif;
+  }
+
+  .box {line-height: 30px; background-color: #FFDB9F;}
   .box a{margin: 10px; color: #000;text-decoration: none; font-family: 'Flamenco'; font-size: 16pt; line-height: 2.0}
 
   .dropdown1 {display: none; position: inline;}
@@ -142,6 +147,8 @@
 <div id="wrapper">
 
   <div class="row">
+          <p>Click on any box to learn more! </p>
+
 <!-- left column with dropdown -->  
     <div class="column box" onClick="expand_collapse1()">
     <a><b> Awards & Recognition </b></a>
