--- a/press.html
+++ b/press.html
@@ -53,6 +53,7 @@
     border-radius: 5px;
     border: #fff 3px solid;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    cursor: pointer;
   }
   .row {
     width: 100%;
@@ -70,6 +71,7 @@
       border-radius: 5px;
       border: #fff 3px solid;
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      cursor: pointer;
   }
   .row_bottom {
     width: 100%;
@@ -204,12 +206,12 @@
     <div class="dropdown3">   
       <li><a> <b> Just some of the millions of articles that promote the joys of ice cream: </b> </a></li>
       <li>
-        <a href="https://www.sharecare.com/health/diet-nutrition/slideshow/health-benefits-of-ice-cream"> 
+        <a href="https://www.sharecare.com/health/diet-nutrition/slideshow/health-benefits-of-ice-cream" target="_blank"> 
         <u> Surprising Benefits </u> 
         </a>
       </li>
       <li>
-        <a href="https://www.consumerreports.org/ice-creams-frozen-yogurts/the-scoop-on-vegan-ice-cream/"> 
+        <a href="https://www.consumerreports.org/ice-creams-frozen-yogurts/the-scoop-on-vegan-ice-cream/" target="_blank"> 
         <u> Everything to Know About Vegan Ice Cream </u> 
         </a>
       </li>
