--- a/events.html
+++ b/events.html
@@ -104,7 +104,7 @@
   </div>
 
 
-  <div style="padding-top:30px; padding-bottom:50px">
+  <div style="padding-top:2%; padding-bottom:2%">
     <h3 class="intro" style="opacity: 1; color:black; font-size:1.4vw">
       We specialize in fun events for any age! Come to us for a birthday party, happy hour, or catering event so special that no one will forget it.</h3>
   </div>
