--- a/gallery.html
+++ b/gallery.html
@@ -74,6 +74,7 @@
 
         .arrow {
             font-size: 400%;
+            font-size: 9vw;
             cursor: pointer;
             padding: 30%;
             color: white;
@@ -87,6 +88,11 @@
 
         .caption {
             visibility: hidden;
+        }
+
+        p {
+            font-size: 16px;
+            font-size: 1.5vw;
         }
 
     </style>
