--- a/ourstory.html
+++ b/ourstory.html
@@ -15,17 +15,17 @@
     body {
         background-color: #FFC2C8;
     }
+
     h1 {
-/*        color: #fff;
-*/      font-family: 'Flamenco', cursive;
+        font-family: 'Flamenco', cursive;
         text-align: center;
-/*        font-size: 48px;
-*/    }
+    }
 
     h2 {
         color: #5DA2D5;
         font-family: 'Flamenco', cursive;
         font-size: 24px;
+        font-size: 2vw;
         margin-right: 50px;
         margin-left: 50px;
     }
@@ -33,14 +33,17 @@
       text-align: center;
       font-family: 'Asap', sans-serif;
       font-size: 24px;
+      font-size: 2vw;
       color: #fff;
       margin-top:10px;
     }
+    
     p {
       margin: 25px;
       font-family: 'Open Sans', sans-serif;
       font-weight: lighter;
       font-size: 16px;
+      font-size: 1.5vw;
       color: #fff;
       text-align: center;
     }
