--- a/press.html
+++ b/press.html
@@ -26,25 +26,27 @@
   p{
     color: #000;
     font-family:'Open Sans', sans-serif;
+    font-size: 16px;
+    font-size: 1.5vw;
   }
 
   .box {line-height: 30px; background-color: #FFDB9F;}
-  .box a{margin: 10px; color: #000;text-decoration: none; font-family: 'Flamenco'; font-size: 16pt; line-height: 2.0}
+  .box a{margin: 10px; color: #000;text-decoration: none; font-family: 'Flamenco'; font-size: 16pt; font-size: 2vw; line-height: 2.0}
 
   .dropdown1 {display: none; position: inline;}
   .dropdown1 ul{list-style: none;margin: 0; padding: 0px;}
   .dropdown1 li {list-style: none; background-color: #ECECEC; margin-bottom:2px; line-height: 30px; }
-  .dropdown1 li a{ list-style: none;color: #000000; text-align:center; font-family: 'Open Sans', sans-serif;font-size: 12pt; }
+  .dropdown1 li a{ list-style: none;color: #000000; text-align:center; font-family: 'Open Sans', sans-serif; font-size: 12pt; font-size: 1.5vw; }
 
   .dropdown2 {display: none; position: inline;}
   .dropdown2 ul{list-style: none;margin: 0; padding: 0px;}
   .dropdown2 li {list-style: none; background-color: #ECECEC; margin-bottom:2px; line-height: 30px; }
-  .dropdown2 li a{ list-style: none;color: #000000; text-align:center; font-family: 'Open Sans', sans-serif;  font-size: 12pt;}
+  .dropdown2 li a{ list-style: none;color: #000000; text-align:center; font-family: 'Open Sans', sans-serif; font-size: 12pt; font-size: 1.5vw;}
 
   .dropdown3 {display: none;}
   .dropdown3 ul{list-style: none;margin: 0; padding: 0px;}
   .dropdown3 li {list-style: none; background-color: #ECECEC; margin-bottom:2px; line-height: 30px; }
-  .dropdown3 li a{ list-style: none;color: #000000; text-align:center; font-family: 'Open Sans', sans-serif;  font-size: 12pt;}
+  .dropdown3 li a{ list-style: none;color: #000000; text-align:center; font-family: 'Open Sans', sans-serif; font-size: 12pt; font-size: 1.5vw;}
 
   .column {
     float: left;
