--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,8 @@
             border-radius: 5px;
             margin-bottom: 5%;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+            font-size: 15px;
+            font-size: 1.25vw;
         }
 
         textarea, select, input {
@@ -49,10 +51,12 @@
             border-radius: 4px;
             resize: none;
             font-size: 15px;
+            font-size: 1.25vw;
         }
 
         .dropdown {
             font-size: 15px;
+            font-size: 1.25vw;
             background-color: #ffffff;
         }
 
@@ -65,6 +69,7 @@
             cursor: pointer;
             font-family: 'Flamenco', cursive;
             font-size: 110%;
+            font-size: 1.5vw;
             font-weight: bold;
             border-color: #ffffff;
         }
@@ -90,6 +95,11 @@
             border-radius: 5px;
             margin-bottom: 2%;
             color: #000000;
+        }
+
+        p {
+            font-size: 16px;
+            font-size: 1.5vw;
         }
     </style>
     <link href="https://fonts.googleapis.com/css?family=Flamenco&display=swap" rel="stylesheet">
