--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </div>
 
 
-    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 75px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
+    <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 75px; font-size: 6vw; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">
       
     Welcome to Jen & Berry's
 
