--- a/menu.html
+++ b/menu.html
@@ -13,11 +13,9 @@
         background-color: #FFC2C8;
     }
     h1 {
-/*        color: #fff;
-*/        font-family: 'Flamenco', cursive;
+        font-family: 'Flamenco', cursive;
         text-align: center;
-/*        font-size: 64px;
-*/    }
+    }
 
     h2 {
         color: #FC4A1A;
@@ -31,6 +29,7 @@
       font-family: 'Asap', sans-serif;
       text-shadow: 2px 2px #000;
       font-size: 24px;
+      font-size: 2vw;
       color: #fff;
       margin-top:10px;
     }
@@ -40,6 +39,7 @@
       font-family: 'Open Sans', sans-serif;
       font-weight: lighter;
       font-size: 16px;
+      font-size: 1.5vw;
       color: #fff;
       text-align: center;
     }
@@ -98,10 +98,6 @@
     </ul>
   </nav>
 </div>
-  
-   <!--  <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
-      Our Menu
-    </h2> -->
 
         <div class="row">
             <div class="column"><img src="Menu-photos/pink.jpg" alt="Pink Ice Cream" class="img"></div>
