--- a/ourstory.html
+++ b/ourstory.html
@@ -26,8 +26,8 @@
         font-family: 'Flamenco', cursive;
         font-size: 24px;
         font-size: 2vw;
-        margin-right: 50px;
-        margin-left: 50px;
+        margin-right: 2%;
+        margin-left: 2%;
     }
     h4 {
       text-align: center;
@@ -35,11 +35,11 @@
       font-size: 24px;
       font-size: 2vw;
       color: #fff;
-      margin-top:10px;
+      margin-top: 1%;
     }
-    
+
     p {
-      margin: 25px;
+      margin: 3%;
       font-family: 'Open Sans', sans-serif;
       font-weight: lighter;
       font-size: 16px;
@@ -122,16 +122,12 @@
     </ul>
   </nav>
 </div>
-<!--   
-    <h2 style="color: #fff; text-shadow: 3px 3px #000; font-size: 90px; text-align: center; opacity: 0.9; margin: 40px; text-decoration: underline">   
-      Our Story
-    </h2> -->
 
-        <div class="row" style="padding: 30px 0 30px 0;"> <img src="Ourstory-photos/employees.jpg" alt="Employees" style="width: 70%; height: auto; padding-top: 0;"> </div>
+        <div class="row" style="padding: 2% 0 2% 0;"> <img src="Ourstory-photos/employees.jpg" alt="Employees" style="width: 70%; height: auto; padding-top: 0;"> </div>
         <div class="row" style="background-color: #E6E6E6; width: 70%; text-align: center; margin: auto; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"> <p style="color: #000;"> Hi! We're Jen and Berry's. I know what you might be thinking–no way! I love Ben and Jerry's, but our names are <i>actually</i> Jen and Berry! We work tirelessly each day to deliver the best quality, most delicious tasting ice cream on the market. </p>  </div>
 
 
-        <div class="row" style="padding: 30px 0 30px 0; text-align: center; width: 70%">
+        <div class="row" style="padding: 2% 0 2% 0; text-align: center; width: 70%">
             <div class="column-link" style="padding: 0 8px 0 0; position: relative;"> <a href="press.html"> <img src="Ourstory-photos/newspaper.jpg" alt="Newspaper" class="img"> </a>
                 <a href="press.html"> <div class="centered" style="background-color: #fff"><h2>See Where We've Been Mentioned</h2></div> </a>
             </div>
