--- a/gallery.html
+++ b/gallery.html
@@ -88,6 +88,8 @@
 
         .caption {
             visibility: hidden;
+            font-size: 16px;
+            font-size: 1.5vw;
         }
 
         p {
