--- a/gallery.html
+++ b/gallery.html
@@ -45,7 +45,7 @@
         
         .column {
             float: left;
-            padding: 0 8px;
+            padding: 0 1%;
         }
 
         .col-sm {
