--- a/contact.html
+++ b/contact.html
@@ -172,6 +172,7 @@
   </footer>
 
     <script>
+        // if form is valid on submit, show confirmation message
         function submit_event() {
             if (validate_form()) {
                 form = document.forms[0];
@@ -187,18 +188,21 @@
             }
         }
 
+        // validate form 
         function validate_form() {
             fields = ["name", "phone", "email", "comments"];
             field_labels = ["Name", "Phone Number", "Email", "Message"];
             form = document.forms[0];
             empty = new Array;
 
+            // check that all fields are filled out 
             for (i in fields) {
                 if (form[fields[i]].value == "") {
                     empty.push(field_labels[i]);
                 }
             }
 
+            // alert on which fields aren't filled out
             if (empty.length > 0) {
                 message = "Please fill out these fields: \n" + empty.join(", ");                
                 alert(message);
