--- a/menu.html
+++ b/menu.html
@@ -13,11 +13,9 @@
         background-color: #FFC2C8;
     }
     h1 {
-/*        color: #fff;
-*/        font-family: 'Flamenco', cursive;
+        font-family: 'Flamenco', cursive;
         text-align: center;
-/*        font-size: 64px;
-*/    }
+    }
 
     h2 {
         color: #FC4A1A;
@@ -99,10 +97,6 @@
   </nav>
 </div>
   
-   <!--  <h2 style="font-family: 'Flamenco'; color: white; text-decoration: underline; font-size: 90px; text-align: center; opacity: 0.9; text-shadow: 2px 2px black;">   
-      Our Menu
-    </h2> -->
-
         <div class="row">
             <div class="column"><img src="Menu-photos/pink.jpg" alt="Pink Ice Cream" class="img"></div>
             <div class="column"> <img src="Menu-photos/green.jpg" alt="Green Ice Cream" class="img"> </div>
