--- a/ourstory.html
+++ b/ourstory.html
@@ -15,11 +15,9 @@
         background-color: #FFC2C8;
     }
     h1 {
-/*        color: #fff;
-*/      font-family: 'Flamenco', cursive;
+        font-family: 'Flamenco', cursive;
         text-align: center;
-/*        font-size: 48px;
-*/    }
+    }
 
     h2 {
         color: #5DA2D5;
@@ -118,10 +116,6 @@
     </ul>
   </nav>
 </div>
-<!--   
-    <h2 style="color: #fff; text-shadow: 3px 3px #000; font-size: 90px; text-align: center; opacity: 0.9; margin: 40px; text-decoration: underline">   
-      Our Story
-    </h2> -->
 
         <div class="row" style="padding: 30px 0 30px 0;"> <img src="Ourstory-photos/employees.jpg" alt="Employees" style="width: 70%; height: auto; padding-top: 0;"> </div>
         <div class="row" style="background-color: #E6E6E6; width: 70%; text-align: center; margin: auto; box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);"> <p style="color: #000;"> Hi! We're Jen and Berry's. I know what you might be thinking–no way! I love Ben and Jerry's, but our names are <i>actually</i> Jen and Berry! We work tirelessly each day to deliver the best quality, most delicious tasting ice cream on the market. </p>  </div>
