--- a/press.html
+++ b/press.html
@@ -101,6 +101,7 @@
 
 <script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript"></script>
 
+<!--  Each function expands(shows) and collapses(hides) the respective information box on-click -->
 <script>
   function expand_collapse1() {
     if($(".dropdown1").css('display') == 'none') {
